# faunavault

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  ollama_client.py
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: image-lightbox.tsx
frontend/app/lib/: api.ts
frontend/app/photos/[id]/: page.tsx  photo-detail.tsx
